# tutorial_alerce

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: app.py
src/routes/: htmx.py  rest.py
src/services/: alerce_client.py  avro.py  classifiers.py  coord_residuals.py  coordinates.py  crossmatch.py  features.py  lightcurve.py  lsst_neighbors.py  normalize.py  object_info.py  object_list.py  other_archives.py  probability.py  safe_json.py  stamps.py  survey_config.py  tns.py
src/static/css/: tailwind.css
src/static/js/: airmass.js  aladin.js  coord_residuals.js  coords.js  cosmology.js  dust.js  helpers.js  lightcurve.js  object_nav.js  panel_help.js  periodogram.js  radar.js  selection.js  specz.js  stamps.js
src/templates/: _panel_help.html.jinja  base.html.jinja  index.html.jinja  input.html.jinja
src/templates/airmass/: airmassPanel.html.jinja
src/templates/aladin/: aladinPreview.html.jinja
src/templates/avro/: avroTable.html.jinja
src/templates/basic_information/: basicInformationPreview.html.jinja
src/templates/coord_residuals/: coordResidualsPreview.html.jinja
src/templates/crossmatch/: crossmatchPanel.html.jinja
tests/: test_avro.py  test_classifiers.py  test_coord_residuals.py  test_coordinates.py  test_crossmatch.py  test_features.py  test_lightcurve.py  test_lsst_neighbors.py  test_normalize.py  test_object_info.py  test_object_list.py  test_other_archives.py  test_probability.py  test_routes.py  test_safe_json.py  test_stamps.py  test_survey_config.py  test_tns.py
(+14 files in other folders)
